# bayesian-methods-for-hackers-memo

./: .gitignore  Makefile  PIPELINE.md  README.md  dvc.yaml  params.yaml  pyproject.toml
chapter01/: analysis.py  messages_analysis.py  sampling.py
chapter02/: ab_testing.py
docs/: Makefile  conf.py  index.rst  make.bat
src/: utils.py
src/chapter01/: analysis.py  sampling.py
src/chapter02/: ab_testing.py  one_bernoulli.py  two_bernoulli.py  two_bernoulli_analysis.py  two_bernoulli_sampling.py
