[tool.poetry]
name = "bayesian-methods-for-hackers-memo"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pymc = "^5.4.0"
japanize-matplotlib = "^1.1.3"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
dvc = "^2.58.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
